Integrate shadcn into codebase

--- a/components.json
+++ b/components.json
@@ -5,18 +5,18 @@
   "tsx": true,
   "tailwind": {
     "config": "",
-    "css": "app/app.css",
+    "css": "app/tailwind_styles.css",
     "baseColor": "gray",
     "cssVariables": false,
     "prefix": ""
   },
   "iconLibrary": "lucide",
   "aliases": {
-    "components": "~/components",
-    "utils": "~/lib/utils",
-    "ui": "~/components/ui",
-    "lib": "~/lib",
-    "hooks": "~/hooks"
+    "components": "~/shadcn/components",
+    "utils": "~/shadcn/lib/utils",
+    "ui": "~/shadcn/components/ui",
+    "lib": "~/shadcn/lib",
+    "hooks": "~/shadcn/hooks"
   },
   "registries": {}
 }
