--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@react-google-maps/api": "^2.20.3",
+    "@react-keycloak/web": "^3.4.0",
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
     "@tanstack/query-core": "^5.90.10",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.31",
+    "keycloak-js": "^26.2.1",
     "lucide-react": "^0.553.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
