--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,2 @@
-VITE_API_URL=http://jucaneat-java-backend:8080
 VITE_KEYCLOAK_URL=http://keycloak.local
-VITE_BACKEND_URL=http://jucaneat.local/api
-
+VITE_BACKEND_URL=http://jucaneat.local
