feat: update to https

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-VITE_KEYCLOAK_URL=http://keycloak.local
-VITE_BACKEND_URL=http://jucaneat.local
+VITE_KEYCLOAK_URL=https://keycloak.local
+VITE_BACKEND_URL=https://jucaneat.local
