--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_API_URL=http://localhost:8080
-VITE_KEYCLOAK_URL=http://localhost:8081
+VITE_KEYCLOAK_URL=https://localhost:8081
+VITE_BACKEND_URL=https://localhost:8080
