--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,6 +7,29 @@ on:
       - '!main'
 
 jobs:
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Build Docker image
+        run: docker build -t test-image .
+
+      - name: Run container
+        run: docker run -d -p 3000:80 --name test-container test-image
+
+      - name: Wait for container
+        run: sleep 5
+
+      - name: Check health
+        run: |
+          curl -f http://localhost:3000 || exit 1
+
+      - name: Stop container
+        if: always()
+        run: docker stop test-container && docker rm test-container
+        
   build-push:
     runs-on: ubuntu-latest
     steps:
