--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,6 +31,7 @@ jobs:
         run: docker stop test-container && docker rm test-container
         
   build-push:
+    needs: check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
