--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,2 @@
-VITE_API_URL=http://jucaneat-java-backend:8080
-VITE_KEYCLOAK_URL=http://keycloak.local
-VITE_BACKEND_URL=http://jucaneat.local/api
+VITE_API_URL=https://jucaneat.local
+VITE_KEYCLOAK_URL=https://keycloak.local
