--- a/.github/workflows/branched-docker-image.yml
+++ b/.github/workflows/branched-docker-image.yml
@@ -1,4 +1,4 @@
-name: Branched Docker image build and push
+name: Branched Docker Build and Push
 
 on:
   push:
@@ -17,25 +17,60 @@ jobs:
         run: docker build -t test-image .
 
       - name: Run container
-        run: docker run -d -p 3000:80 --name test-container test-image
+        run: docker run -d -p 3000:3000 --name test-container test-image
+
+      - name: Check container status
+        run: |
+          echo "Waiting for container to start..."
+          sleep 3
+          docker ps -a | grep test-container || exit 1
+          echo "Container started"
 
       - name: Wait for container to be healthy
         run: |
-          for i in {1..30}; do
-            if curl -f http://localhost:3000 2>/dev/null; then
-              echo "✓ Container is healthy"
+          echo "Starting health checks..."
+          for i in {1..60}; do
+            echo "Attempt $i/60..."
+            
+            # Check if container is still running
+            if ! docker ps | grep -q test-container; then
+              echo "✗ Container stopped unexpectedly"
+              docker logs test-container
+              exit 1
+            fi
+            
+            # Try to connect with verbose output
+            if curl -v --max-time 5 http://localhost:3000 2>&1 | grep -E "(HTTP|Connection|200|301|302)"; then
+              echo ""
+              echo "✓ Container is responding!"
               exit 0
             fi
-            echo "Attempt $i/30: Waiting for container..."
+            
             sleep 2
           done
-          echo "✗ Container failed to respond"
+          
+          echo ""
+          echo "✗ Container failed to respond after 120 seconds"
+          echo ""
+          echo "=== Docker Logs ==="
           docker logs test-container
+          echo ""
+          echo "=== Running Processes ==="
+          docker exec test-container ps aux || echo "Failed to get processes"
+          echo ""
+          echo "=== Network Status ==="
+          docker exec test-container netstat -tlnp 2>/dev/null || docker exec test-container ss -tlnp 2>/dev/null || echo "Cannot check ports"
           exit 1
+
+      - name: Verify container health
+        run: |
+          echo "Final health verification..."
+          curl -i http://localhost:3000 || exit 1
+          echo "✓ Container is fully healthy"
 
       - name: Stop container
         if: always()
-        run: docker stop test-container && docker rm test-container
+        run: docker stop test-container && docker rm test-container || true
         
   build-push:
     needs: check
