--- a/.github/workflows/latest-image.yml
+++ b/.github/workflows/latest-image.yml
@@ -44,8 +44,15 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+          
+      - name: Build and push with commit SHA
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/jca-react-frontend:${{github.sha}}
 
-      - name: Build and push
+      - name: Build and push latest
         uses: docker/build-push-action@v5
         with:
           context: .
