--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Branched Docker Build and Push
+name: Docker Build and Push
 
 on:
   push:
@@ -21,17 +21,12 @@ jobs:
 
       - name: Check container status
         run: |
-          echo "Waiting for container to start..."
           sleep 3
           docker ps -a | grep test-container || exit 1
-          echo "Container started"
 
       - name: Wait for container to be healthy
         run: |
-          echo "Starting health checks..."
           for i in {1..60}; do
-            echo "Attempt $i/60..."
-            
             # Check if container is still running
             if ! docker ps | grep -q test-container; then
               echo "✗ Container stopped unexpectedly"
@@ -39,9 +34,8 @@ jobs:
               exit 1
             fi
             
-            # Try to connect with verbose output
+            # Try to connect
             if curl -v --max-time 5 http://localhost:3000 2>&1 | grep -E "(HTTP|Connection|200|301|302)"; then
-              echo ""
               echo "✓ Container is responding!"
               exit 0
             fi
@@ -49,24 +43,17 @@ jobs:
             sleep 2
           done
           
-          echo ""
           echo "✗ Container failed to respond after 120 seconds"
-          echo ""
           echo "=== Docker Logs ==="
           docker logs test-container
-          echo ""
           echo "=== Running Processes ==="
           docker exec test-container ps aux || echo "Failed to get processes"
-          echo ""
           echo "=== Network Status ==="
           docker exec test-container netstat -tlnp 2>/dev/null || docker exec test-container ss -tlnp 2>/dev/null || echo "Cannot check ports"
           exit 1
 
       - name: Verify container health
-        run: |
-          echo "Final health verification..."
-          curl -i http://localhost:3000 || exit 1
-          echo "✓ Container is fully healthy"
+        run: curl -i http://localhost:3000 || exit 1
 
       - name: Stop container
         if: always()
