--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,41 +19,10 @@ jobs:
       - name: Run container
         run: docker run -d -p 3000:3000 --name test-container test-image
 
-      - name: Check container status
+      - name: Wait and check health
         run: |
-          sleep 3
-          docker ps -a | grep test-container || exit 1
-
-      - name: Wait for container to be healthy
-        run: |
-          for i in {1..60}; do
-            # Check if container is still running
-            if ! docker ps | grep -q test-container; then
-              echo "✗ Container stopped unexpectedly"
-              docker logs test-container
-              exit 1
-            fi
-            
-            # Try to connect
-            if curl -v --max-time 5 http://localhost:3000 2>&1 | grep -E "(HTTP|Connection|200|301|302)"; then
-              echo "✓ Container is responding!"
-              exit 0
-            fi
-            
-            sleep 2
-          done
-          
-          echo "✗ Container failed to respond after 120 seconds"
-          echo "=== Docker Logs ==="
-          docker logs test-container
-          echo "=== Running Processes ==="
-          docker exec test-container ps aux || echo "Failed to get processes"
-          echo "=== Network Status ==="
-          docker exec test-container netstat -tlnp 2>/dev/null || docker exec test-container ss -tlnp 2>/dev/null || echo "Cannot check ports"
-          exit 1
-
-      - name: Verify container health
-        run: curl -i http://localhost:3000 || exit 1
+          sleep 10
+          curl -f http://localhost:3000 || exit 1
 
       - name: Stop container
         if: always()
