--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "vitest": "^4.0.16"
   },
   "lint-staged": {
-    ".{ts,tsx,js,jsx}": "prettier --write",
-    ".{json,css,md}": "prettier --write"
+    "*.{ts,tsx,js,jsx}": "prettier --write",
+    "*.{json,css,md}": "prettier --write"
   }
 }
